[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pyits"
version = "0.1"
authors = [
  { name = "Franck Pommereau", email = "franck.pommereau@univ-evry.fr" },
]
description = " A Python binding of libITS"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent"
]
dependencies = [
  "pyddd @ git+https://github.com/fpom/pyddd.git",
]

[project.urls]
Homepage = "https://github.com/fpom/pyits"
"Bug Tracker" = "https://github.com/fpom/pyits/issues"
